--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,19 +5,15 @@
 	{% if site.tags != "" %}
 	{% include collecttags.html %}
 	{% endif %}
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CJZCQWFC20"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src=" https://www.googletagmanager.com/gtag/js?id=UA-163356748-1"> </script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-
-		function gtag() {
-			dataLayer.push(arguments);
-		}
-		gtag('js', new Date());
-
-		gtag('config', 'UA-163356748-1');
-	</script>
+  gtag('config', 'G-CJZCQWFC20');
+</script>
 	<title>{% if page.title %}{{ page.title }} | {{ site.title }}{% else %}{{ site.title }}{% endif %}</title>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
