--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,6 +11,10 @@
 {% include head.html %}
 
 <body>
+	<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NCXLMM2S"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
   {% include header.html %}
 
   {% if page.featured-image %}
